--- a/Navigation/appNavigation/build.gradle
+++ b/Navigation/appNavigation/build.gradle
@@ -23,4 +23,7 @@ dependencies {
     compile files('/Users/divijdurve/PersonalProjects/Navigation/android-async-http-1.4.4.jar')
     compile files('/Users/divijdurve/PersonalProjects/Navigation/.idea/libraries/universal-image-loader-1.9.1.jar')
     compile files('/Users/divijdurve/PersonalProjects/Navigation/.idea/libraries/gson-2.2.4.jar')
+    compile files('libs/android-async-http-1.4.4.jar')
+    compile files('libs/gson-2.2.4.jar')
+    compile files('libs/universal-image-loader-1.9.1.jar')
 }
